server.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-server-ingress
  labels:
    name: frontend-server-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - host: app.shopping-cart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-server
                port:
                  number: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: openfaas-fn
  labels:
    app: frontend-app
spec:
    replicas: 1
    selector:
      matchLabels:
        app: frontend-app
    template:
      metadata:
        labels:
          app: frontend-app
      spec:
        containers:
          - name: frontend
            image: serverlessshoppingcart/frontend:latest
            ports:
              - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: openfaas-fn
spec:
  internalTrafficPolicy: Cluster
  type: ClusterIP
  selector:
    app: frontend-app
  ports:
  - name: frontend-service
    protocol: TCP
    port: 8080
